# my-cpp-playground-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: Sanitizers.cmake  StaticAnalyzers.cmake
data/: myCar.json  otherCar.json
src/: CMakeLists.txt  car.cpp  car.hpp
test/: CMakeLists.txt  tests.cpp
